@@ -8,6 +8,9 @@
 	* main/editor/eswitch.c: add remove_trigger_num
 	(used by gamesave.c)
 
+	* main/bmread.c, main/inferno.c: if EDITOR is defined, game 
+	still works if there's no BITMAPS.TBL in a PhysicsFS search path
+
 2005-02-25  Chris Taylor  <chris@icculus.org>
 
 	* arch/carbon/conf.h, D2X.make: no defining OGL in conf.h,
